--- a/src/app.css
+++ b/src/app.css
@@ -62,23 +62,26 @@
 
 .btn-outline-primary {
 
-  --bs-btn-border-width: 0px;
+  --bs-btn-border-width: 1px;
 
-  --bs-btn-color: var(--button-text-pressed);
-  --bs-btn-bg: var(--background-secondary);
-  --bs-btn-border-color: var(--button-text-pressed);
+  --bs-btn-color: var(--button-color-unpressed);
+  --bs-btn-bg: var(--background-primary);
+  --bs-btn-border-color: var(--button-color-unpressed);
 
-  --bs-btn-hover-color: var(--button-text-pressed);
-  --bs-btn-hover-bg: var(--background-primary);
-  --bs-btn-hover-border-color: var(--button-text-pressed);
+  --bs-btn-hover-color: var(--button-color-unpressed);
+  --bs-btn-hover-bg: var(--background-secondary);
+  --bs-btn-hover-border-color: var(--button-color-unpressed);
 
   --bs-btn-active-color: var(--button-text-unpressed);
   --bs-btn-active-bg: var(--button-color-unpressed);
   --bs-btn-active-border-color: var(--button-color-unpressed);
 }
 
-.difficulty-pill {
-  background-color: var(--background-secondary);
+
+.btn-group-vertical .btn-outline-primary:hover {
+  background-color: var(--button-color-pressed) !important;
+  border-color: var(--button-color-unpressed) !important;
+  color: var(--button-color-unpressed) !important;
 }
 
 
